--- a/pokemon/templates/pokemonCard.html
+++ b/pokemon/templates/pokemonCard.html
@@ -12,16 +12,16 @@
         <img class = "center" src="/static/banner.jpg" style="width:500px;" alt="Pokebanner"><br><br>
         
         <div class="card center" style="width: 18rem;">
-            <img class="card-img-top" src="..." alt="Pokemon Image">
+            <img class="card-img-top" src="{{pokemonArtwork}}" alt="Pokemon Image" style="width: 250px;">
             <div class="card-body">
-              <h3 class="card-title">Pokemon Name</h3>
+              <h2 class="card-title">{{pokemonCardName}}</h2>
             </div>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item attack">Attack</li>
-              <li class="list-group-item defence">Defence</li>
-              <li class="list-group-item type1">Type1</li>
-              <li class="list-group-item type2">Type2</li>
-            </ul>
+            <div class="list-group list-group-flush">
+              <p class="list-group-item attack">Attack: {{pokemonAttack}}</p>
+              <p class="list-group-item defence">Defence: {{pokemonDefence}}</p>
+              <p class="list-group-item type1">Type1: {{pokemonType1}}</p>
+              <p class="list-group-item type2">Type2: {{pokemonType2}}</p>
+              </div>
         </div>
 
     </div>
