--- a/pokemon/static/styles.css
+++ b/pokemon/static/styles.css
@@ -1,3 +1,8 @@
+body {
+    background-image: url('forest.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 h1 {
     color: blue;
 }
