--- a/pokemon/templates/pokemonCard.html
+++ b/pokemon/templates/pokemonCard.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <img class = "center" src="/static/banner.jpg" style="width:500px;" alt="Pokebanner"><br><br>
+        <img class = "center" src="/static/banner.png" style="width:500px;" alt="Pokebanner"><br><br>
         
         <div class="card center" style="width: 18rem;">
             <img class="card-img-top" src="{{pokemonArtwork}}" alt="Pokemon Image" style="width: 250px;">
