Frontend updated with cards on card page

--- a/pokemon/templates/index.html
+++ b/pokemon/templates/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <div>
-            <img class = "center" src="/static/banner.png" style="width:500px;" alt="Pokebanner"><br><br>
+            <a href="/"><img class = "center" src="/static/banner.png" style="width:500px;" alt="Pokebanner"></a><br><br>
         </div>
             {% if pokemonList == [] %}
             <h2><span id="downloadMessage" class="badge rounded-pill bg-primary">No Pokemon Downloaded!</span></h2><br><br>
