--- a/pokemon/templates/pokemonDownload.html
+++ b/pokemon/templates/pokemonDownload.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <div>
-            <img class = "center" src="/static/banner.png" style="width:500px;" alt="Pokebanner"><br><br>
+            <a href="/"><img class = "center" src="/static/banner.png" style="width:500px;" alt="Pokebanner"></a><br><br>
         </div>
             <h2><span id="downloadMessage" class="badge rounded-pill bg-primary">Downloading Pokemon...</span></h2><br><br>
         <div id="spinner" class="spinner-border" role="status">
