--- a/pokemon/static/styles.css
+++ b/pokemon/static/styles.css
@@ -24,5 +24,11 @@ h1 {
     text-align: center;
     width: 300px;
 }
-
+.card {
+    border-width: 2px;
+    border-style: solid;
+    border-color: black;
+    border-radius: 25px;
+    background-image: url("parchment.jpg")
+}
 
