--- a/pokemon/templates/pokemonCard.html
+++ b/pokemon/templates/pokemonCard.html
@@ -9,20 +9,23 @@
 </head>
 <body>
     <div class="container">
-        <img class = "center" src="/static/banner.png" style="width:500px;" alt="Pokebanner"><br><br>
-        
+        <div>
+            <a href="/"><img class = "center" src="/static/banner.png" style="width:500px;" alt="Pokebanner"></a><br><br>
+        </div>
         <div class="card center" style="width: 18rem;">
             <img class="card-img-top" src="{{pokemonArtwork}}" alt="Pokemon Image" style="width: 250px;">
             <div class="card-body">
               <h2 class="card-title">{{pokemonCardName}}</h2>
             </div>
-            <div class="list-group list-group-flush">
-              <p class="list-group-item attack">Attack: {{pokemonAttack}}</p>
-              <p class="list-group-item defence">Defence: {{pokemonDefence}}</p>
-              <p class="list-group-item type1">Type1: {{pokemonType1}}</p>
-              <p class="list-group-item type2">Type2: {{pokemonType2}}</p>
+            <div class="">
+              <p class="attack">Attack: {{pokemonAttack}}</p>
+              <p class="defence">Defence: {{pokemonDefence}}</p>
+              <p class="type1">Type1: {{pokemonType1}}</p>
+              <p class="type2">Type2: {{pokemonType2}}</p>
               </div>
         </div>
+
+
 
     </div>
 
