--- a/pokemon/templates/pokemonCard.html
+++ b/pokemon/templates/pokemonCard.html
@@ -13,15 +13,17 @@
             <a href="/"><img class = "center" src="/static/banner.png" style="width:500px;" alt="Pokebanner"></a><br><br>
         </div>
         <div class="card center" style="width: 18rem;">
-            <img class="card-img-top" src="{{pokemonArtwork}}" alt="Pokemon Image" style="width: 250px;">
+            <img class="card-img-top" src="{{pokemonArtwork}}" alt="Pokemon Image" style="width: 200px;">
             <div class="card-body">
               <h2 class="card-title">{{pokemonCardName}}</h2>
             </div>
             <div class="">
               <p class="attack">Attack: {{pokemonAttack}}</p>
               <p class="defence">Defence: {{pokemonDefence}}</p>
-              <p class="type1">Type1: {{pokemonType1}}</p>
-              <p class="type2">Type2: {{pokemonType2}}</p>
+              <p class="type1">Type 1: {{pokemonType1}}</p>
+              {% if pokemonType2 != "None" %}
+              <p class="type2">Type 2: {{pokemonType2}}</p>
+              {% endif %}
               </div>
         </div>
 
