--- a/pokemon/templates/pokemonCard.html
+++ b/pokemon/templates/pokemonCard.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link href="{{ url_for('static', filename='./styles.css') }}" rel="stylesheet" type="text/css" />
+
     <title>Pokedex</title>
 </head>
 <body>
@@ -13,7 +16,7 @@
             <a href="/"><img class = "center" src="/static/banner.png" style="width:500px;" alt="Pokebanner"></a><br><br>
         </div>
         <div class="card center" style="width: 18rem;">
-            <img class="card-img-top" src="{{pokemonArtwork}}" alt="Pokemon Image" style="width: 200px;">
+            <img class="center card-img-top" src="{{pokemonArtwork}}" alt="Pokemon Image" style="width: 200px;">
             <div class="card-body">
               <h2 class="card-title">{{pokemonCardName}}</h2>
             </div>
@@ -27,6 +30,9 @@
               </div>
         </div>
 
+        <br><br>
+        <a href="/"><h2><span id="back" class="badge rounded-pill bg-primary" >Back to Main Page</span></h2></a>
+        
 
 
     </div>
