--- a/pokemon/templates/pokemonCard.html
+++ b/pokemon/templates/pokemonCard.html
@@ -20,14 +20,14 @@
             <div class="card-body">
               <h2 class="card-title">{{pokemonCardName}}</h2>
             </div>
-            <div class="">
-              <p class="attack">Attack: {{pokemonAttack}}</p>
-              <p class="defence">Defence: {{pokemonDefence}}</p>
-              <p class="type1">Type 1: {{pokemonType1}}</p>
-              {% if pokemonType2 != "None" %}
-              <p class="type2">Type 2: {{pokemonType2}}</p>
-              {% endif %}
-              </div>
+            <div class="stats">
+                <p class="attack">Attack: {{pokemonAttack}}</p>
+                <p class="defence">Defence: {{pokemonDefence}}</p>
+                <p class="type1">Type 1: {{pokemonType1}}</p>
+                {% if pokemonType2 != "None" %}
+                    <p class="type2">Type 2: {{pokemonType2}}</p>
+                {% endif %}
+            </div>
         </div>
 
         <br><br>
