Checks for database to be filled

--- a/pokemon/templates/pokemonCard.html
+++ b/pokemon/templates/pokemonCard.html
@@ -31,7 +31,7 @@
         </div>
 
         <br><br>
-        <a href="/"><h2><span id="back" class="badge rounded-pill bg-primary" >Back to Main Page</span></h2></a>
+        <a href="/pokedex"><h2><span id="back" class="badge rounded-pill bg-primary" >Back to Pokedex</span></h2></a>
         
 
 
