--- a/pokemon/templates/pokedex.html
+++ b/pokemon/templates/pokedex.html
@@ -28,7 +28,7 @@
                     {% for pokemon in pokemonList %}
                         <option value={{pokemon["Name"]}}>{{pokemon["Name"]}}</option>
                     {% endfor %}
-                </select>
+                </select><br>
                 <input  type="submit" value="Submit">
             </form>
     </div>
