--- a/pokemon/templates/pokemonDownload.html
+++ b/pokemon/templates/pokemonDownload.html
@@ -16,10 +16,10 @@
             <a href="/"><img class = "center" src="/static/banner.png" style="width:500px;" alt="Pokebanner"></a><br><br>
         </div>
             <h2><span id="downloadMessage" class="badge rounded-pill bg-primary">Downloading Pokemon...</span></h2><br><br>
-        <div id="spinner" class="spinner-border" role="status">
+        <div id="spinner" class="spinner-border text-light" role="status">
             <span class="visually-hidden">Loading...</span>
         </div>
-            <a href="/"><h2><span id="backButton" class="badge rounded-pill bg-primary" >Back to Main Page</span></h2></a>
+            <a href="/pokedex"><h2><span id="backButton" class="badge rounded-pill bg-primary" >Back to Pokedex</span></h2></a>
         <div>
 
         </div>
