Fixed empty second typing

--- a/pokemon/templates/pokemonGame.html
+++ b/pokemon/templates/pokemonGame.html
@@ -26,7 +26,7 @@
                         <p class="attack">Attack: {{pokemonAttack1}}</p>
                         <p class="defence">Defence: {{pokemonDefence1}}</p>
                         <p class="type1">Type 1: {{pokemonType1Deck1}}</p>
-                        {% if pokemonType2Deck1 != None %}
+                        {% if pokemonType2Deck1 != "None" %}
                             <p class="type2">Type 2: {{pokemonType2Deck1}}</p>
                         {% else %}
                             <p class="type2">&nbsp;</p>
@@ -45,7 +45,7 @@
                         <p class="attack">Attack: {{pokemonAttack2}}</p>
                         <p class="defence">Defence: {{pokemonDefence2}}</p>
                         <p class="type1">Type 1: {{pokemonType1Deck2}}</p>
-                        {% if pokemonType2Deck2 != None %}
+                        {% if pokemonType2Deck2 != "None" %}
                             <p class="type2">Type 2: {{pokemonType2Deck2}}</p>
                         {% else %}
                             <p class="type2">&nbsp;</p>
