--- a/pokemon/templates/pokemonGame.html
+++ b/pokemon/templates/pokemonGame.html
@@ -1,68 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
     <link href="{{ url_for('static', filename='./styles.css') }}" rel="stylesheet" type="text/css" />
 
     <title>Pokemon Game</title>
 </head>
+
 <body>
+    <script>
+        function updateCard1() {
+            fetch('/cycleCards1')
+                .then(data => data.text())
+                .then(data => {
+                    element = document.getElementById("deck1");
+                    element.innerHTML = data
+                });
+        }
+        function updateCard2() {
+            fetch('/cycleCards2')
+                .then(data => data.text())
+                .then(data => {
+                    element = document.getElementById("deck2");
+                    element.innerHTML = data
+                });
+        }
+    </script>
     <div class="container">
         <div>
-            <a href="/"><img class = "center" src="/static/banner.png" style="width:500px;" alt="Pokebanner"></a><br><br>
+            <a href="/"><img class="center" src="/static/banner.png" style="width:500px;" alt="Pokebanner"></a><br><br>
         </div>
         {% if databaseCheck == False %}
-            <div class="flexContainer">
-                <div class="card center card1" style="width: 18rem;">
-                    <img class="center card-img-top" src="{{pokemonArtwork1}}" alt="Pokemon Image" style="width: 200px;">
-                    <div class="card-body">
-                    <h2 class="card-title">{{pokemonName1}}</h2>
-                    </div>
-                    <div class="stats">
-                        <p class="attack">Attack: {{pokemonAttack1}}</p>
-                        <p class="defence">Defence: {{pokemonDefence1}}</p>
-                        <p class="type1">Type 1: {{pokemonType1Deck1}}</p>
-                        {% if pokemonType2Deck1 != "None" %}
-                            <p class="type2">Type 2: {{pokemonType2Deck1}}</p>
-                        {% else %}
+        <div class="flexContainer justify-content-center">
+            <div>
+                <div id="deck1">
+                    <div class="card center" style="width: 18rem;">
+                        <img class="center card-img-top" src="{{pokemon1.artwork}}" alt="Pokemon Image"
+                            style="width: 200px;">
+                        <div class="card-body">
+                            <h2 class="card-title">{{pokemon1.name}}</h2>
+                        </div>
+                        <div class="stats">
+                            <p class="attack">Attack: {{pokemon1.attack}}</p>
+                            <p class="defence">Defence: {{pokemon1.defence}}</p>
+                            <p class="type1">Type 1: {{pokemon1.type1}}</p>
+                            {% if pokemon1.type2 != "None" %}
+                            <p class="type2">Type 2: {{pokemon1.type2}}</p>
+                            {% else %}
                             <p class="type2">&nbsp;</p>
-                        {% endif %}
+                            {% endif %}
+                        </div>
                     </div>
                 </div>
-                <div id="vs">
-                    <img class="center" src="/static/vs.gif" alt="Versus Image" style="width: 200px;">
-                </div>
-                <div class="card center card2" style="width: 18rem;">
-                    <img class="center card-img-top" src="{{pokemonArtwork2}}" alt="Pokemon Image" style="width: 200px;">
-                    <div class="card-body">
-                    <h2 class="card-title">{{pokemonName2}}</h2>
-                    </div>
-                    <div class="stats">
-                        <p class="attack">Attack: {{pokemonAttack2}}</p>
-                        <p class="defence">Defence: {{pokemonDefence2}}</p>
-                        <p class="type1">Type 1: {{pokemonType1Deck2}}</p>
-                        {% if pokemonType2Deck2 != "None" %}
-                            <p class="type2">Type 2: {{pokemonType2Deck2}}</p>
-                        {% else %}
-                            <p class="type2">&nbsp;</p>
-                        {% endif %}
-                    </div>
-                </div>
+                <a onclick="updateCard1()">
+                    <h2><span id="nextButton" class="badge rounded-pill bg-primary">Next</span></h2>
+                </a>
             </div>
+            <div id="vs">
+                <img class="center" src="/static/vs.gif" alt="Versus Image" style="width: 200px;">
+            </div>
+            <div>
+                <div id="deck2">
+                    <div class="card center" style="width: 18rem;">
+                        <img class="center card-img-top" src="{{pokemon2.artwork}}" alt="Pokemon Image"
+                            style="width: 200px;">
+                        <div class="card-body">
+                            <h2 class="card-title">{{pokemon2.name}}</h2>
+                        </div>
+                        <div class="stats">
+                            <p class="attack">Attack: {{pokemon2.attack}}</p>
+                            <p class="defence">Defence: {{pokemon2.defence}}</p>
+                            <p class="type1">Type 1: {{pokemon2.type1}}</p>
+                            {% if pokemon2.type2 != "None" %}
+                            <p class="type2">Type 2: {{pokemon2.type2}}</p>
+                            {% else %}
+                            <p class="type2">&nbsp;</p>
+                            {% endif %}
+                        </div>
+                    </div>
+                </div>
+            <a onclick="updateCard2()">
+                <h2><span id="nextButton" class="badge rounded-pill bg-primary">Next</span></h2>
+            </a>
+            </div>
+        </div>
         {% else %}
-            <br><h2><span id="back" class="badge rounded-pill bg-danger" >No cards available</span></h2>
+        <br>
+        <h2><span id="back" class="badge rounded-pill bg-danger">No cards available</span></h2>
         {% endif %}
         <br><br>
-        <a href="/"><h2><span id="back" class="badge rounded-pill bg-primary" >Back to Main Page</span></h2></a>
-        
+        <a href="/">
+            <h2><span id="back" class="badge rounded-pill bg-primary">Back to Main Page</span></h2>
+        </a>
+
 
 
     </div>
 
 
 </body>
+
 </html>
