--- a/pokemon/templates/pokemonCard.html
+++ b/pokemon/templates/pokemonCard.html
@@ -23,9 +23,11 @@
             <div class="stats">
                 <p class="attack">Attack: {{pokemonAttack}}</p>
                 <p class="defence">Defence: {{pokemonDefence}}</p>
-                <p class="type1">Type 1: {{pokemonType1}}</p>
+                <p class="type1">Type 1: {{pokemonType1.capitalize()}}</p>
                 {% if pokemonType2 != "None" %}
-                    <p class="type2">Type 2: {{pokemonType2}}</p>
+                    <p class="type2">Type 2: {{pokemonType2.capitalize()}}</p>
+                {% else %}
+                    <p class="type2">&nbsp;</p>
                 {% endif %}
             </div>
         </div>
