--- a/pokemon/templates/pokedex.html
+++ b/pokemon/templates/pokedex.html
@@ -31,6 +31,11 @@
                 </select><br>
                 <input  type="submit" value="Submit">
             </form>
+        <div>
+            <a href="/">
+                <br><br><br><br><br><br><br><br><br><h2><span id="back" class="badge rounded-pill bg-primary">Back to Main Page</span></h2>
+            </a>
+        </div>
     </div>
 
 </body>
