--- a/pokemon/templates/pokedex.html
+++ b/pokemon/templates/pokedex.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link href="{{ url_for('static', filename='./styles.css') }}" rel="stylesheet" type="text/css" />
+    <script src="{{ url_for('static', filename='./scripts.js') }}"></script>
     <title>Pokedex</title>
 </head>
 <body>
@@ -23,13 +24,14 @@
               
             <form id="pokemonList" class= "center" action="/pokemonCard">
                 <label for="pokemon"></label>
-                <select id="selectField" class="form-control" name="pokemonList">
-                    <option value="" disabled selected>Select your Pokemon</option>
+                <select id="selectField" class="form-control" name="pokemonList" onchange="unghostButton()">
+                    <option value="default" disabled selected>Select your Pokemon</option>
                     {% for pokemon in pokemonList %}
                         <option value={{pokemon["Name"]}}>{{pokemon["Name"]}}</option>
                     {% endfor %}
                 </select><br>
-                <input  type="submit" value="Submit">
+                <input id="selectPokemon" type="submit" value="Submit" disabled>
+                    
             </form>
         <div>
             <a href="/">
