hotfix card display type 2

--- a/pokemon/templates/pokemonCard.html
+++ b/pokemon/templates/pokemonCard.html
@@ -24,7 +24,7 @@
                 <p class="attack">Attack: {{pokemonAttack}}</p>
                 <p class="defence">Defence: {{pokemonDefence}}</p>
                 <p class="type1">Type 1: {{pokemonType1.capitalize()}}</p>
-                {% if pokemonType2 != "None" %}
+                {% if pokemonType2 != None %}
                     <p class="type2">Type 2: {{pokemonType2.capitalize()}}</p>
                 {% else %}
                     <p class="type2">&nbsp;</p>
